# AmixDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
head/: AmixTask.h
src/: AmixTask.cpp  main.cpp
